Change comments defer to on hover

--- a/src/app/comments-example/comments-example.component.html
+++ b/src/app/comments-example/comments-example.component.html
@@ -112,7 +112,7 @@
 <hr />
 <br />
 
-@defer (on viewport; prefetch on idle) {
+@defer (on hover; prefetch on idle) {
     <app-comments />
 } @placeholder {
     <app-placeholder/>
